# Flam-Edge-detection-assignemnt

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/edgeviewer/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/edgeviewer/camera/: CameraController.kt
app/src/main/java/com/example/edgeviewer/gl/: GLView.kt  GrayFrameRenderer.kt  SimpleRenderer.kt
app/src/main/res/layout/: activity_main.xml
jni/: CMakeLists.txt
jni/src/: native-lib.cpp
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: index.ts
